--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                    <h1>CGA</h1>
+                    <img class="logo-icon"  src="./images/logo.png" alt="" width="50px"  height="50px">
                 </a>
-                <img src="/images/menu.png" alt="" class="menu-icon" onclick="toggleMenu()">
+                <img class="menu-icon" src="/images/menu.png" alt="" class="menu-icon" onclick="toggleMenu()">
             </div>
 
             <nav class="navbar">
@@ -146,7 +146,7 @@
                             </div>
                             <div class="div_Icon">
                                 <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(this)"></i>
-                                <i class="fa-solid fa-cart-shopping Cart"></i>
+                                <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_4')"></i>
                             </div>
                         </section>
                     </div>
@@ -172,7 +172,7 @@
                             </div>
                             <div class="div_Icon">
                                 <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(this)"></i>
-                                <i class="fa-solid fa-cart-shopping Cart"></i>
+                                <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_7')"></i>
                             </div>
                         </section>
                     </div>
@@ -198,7 +198,7 @@
                             </div>
                             <div class="div_Icon">
                                 <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(this)"></i>
-                                <i class="fa-solid fa-cart-shopping Cart"></i>
+                                <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_9')"></i>
                             </div>
                         </section>
                     </div>
@@ -223,7 +223,7 @@
                             </div>
                             <div class="div_Icon">
                                 <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(this)"></i>
-                                <i class="fa-solid fa-cart-shopping Cart"></i>
+                                <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_10')"></i>
                             </div>
                         </section>
                     </div>
@@ -248,7 +248,7 @@
                             </div>
                             <div class="div_Icon">
                                 <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(this)"></i>
-                                <i class="fa-solid fa-cart-shopping Cart"></i>
+                                <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_11')"></i>
                             </div>
                         </section>
                     </div>
@@ -273,7 +273,7 @@
                             </div>
                             <div class="div_Icon">
                                 <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(this)"></i>
-                                <i class="fa-solid fa-cart-shopping Cart"></i>
+                                <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_12')"></i>
                             </div>
                         </section>
                     </div>
@@ -298,7 +298,7 @@
                             </div>
                             <div class="div_Icon">
                                 <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(this)"></i>
-                                <i class="fa-solid fa-cart-shopping Cart"></i>
+                                <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_14')"></i>
                             </div>
                         </section>
                     </div>
@@ -323,7 +323,7 @@
                             </div>
                             <div class="div_Icon">
                                 <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(this)"></i>
-                                <i class="fa-solid fa-cart-shopping Cart"></i>
+                                <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_15')"></i>
                             </div>
                         </section>
                     </div>
@@ -356,7 +356,7 @@
                             </div>
                             <div class="div_Icon">
                                 <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(this)"></i>
-                                <i class="fa-solid fa-cart-shopping Cart"></i>
+                                <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_1')"></i>
                             </div>
                         </section>
                     </div>
@@ -381,7 +381,7 @@
                             </div>
                             <div class="div_Icon">
                                 <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(this)"></i>
-                                <i class="fa-solid fa-cart-shopping Cart"></i>
+                                <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_6')"></i>
                             </div>
                         </section>
                     </div>
@@ -409,7 +409,7 @@
                             </div>
                             <div class="div_Icon">
                                 <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(this)"></i>
-                                <i class="fa-solid fa-cart-shopping Cart"></i>
+                                <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_9')"></i>
                             </div>
                         </section>
                     </div>
@@ -440,7 +440,7 @@
                             </div>
                             <div class="div_Icon">
                                 <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(this)"></i>
-                                <i class="fa-solid fa-cart-shopping Cart"></i>
+                                <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_12')"></i>
                             </div>
                         </section>
                     </div>
@@ -466,7 +466,7 @@
                             </div>
                             <div class="div_Icon">
                                 <i class="fa-solid fa-heart Heart" value="0" onclick="changeHeartColor(this)"></i>
-                                <i class="fa-solid fa-cart-shopping Cart"></i>
+                                <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_14')"></i>
                             </div>
                         </section>
                     </div>
