--- a/products.html
+++ b/products.html
@@ -14,8 +14,10 @@
         <header id="header">
             <div class="container">
                 <div class="logo">
-                    <a href="index.html"><h1>CGA</h1></a>
-                    <img src="/images/menu.png" alt="" class="menu-icon" onclick="toggleMenu()">
+                    <a href="index.html">
+                        <img class="logo-icon"  src="./images/logo.png" alt="" width="50px"  height="50px">
+                    </a>
+                    <img class="menu-icon" src="/images/menu.png" alt="" class="menu-icon" onclick="toggleMenu()">
                 </div>
                 <nav class="navbar">
                     <ul>
@@ -128,7 +130,7 @@
                             </div>
                             <div class="div_Icon">
                                 <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
-                                <i class="fa-solid fa-cart-shopping Cart"></i>
+                                <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_3')"></i>
                             </div>
                         </section> 
                     </div>
@@ -153,7 +155,7 @@
                             </div>
                             <div class="div_Icon">
                                 <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
-                                <i class="fa-solid fa-cart-shopping Cart"></i>
+                                <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_4')"></i>
                             </div>
                         </section> 
                     </div>
@@ -179,7 +181,7 @@
                             </div>
                             <div class="div_Icon">
                                 <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
-                                <i class="fa-solid fa-cart-shopping Cart"></i>
+                                <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_5')"></i>
                             </div>
                         </section> 
                     </div>
@@ -204,7 +206,7 @@
                             </div>
                             <div class="div_Icon">
                                 <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
-                                <i class="fa-solid fa-cart-shopping Cart"></i>
+                                <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_6')"></i>
                             </div> 
                         </section> 
                     </div>
@@ -216,7 +218,7 @@
                             <div class="div_Content">
                                 <table>
                                     <tr>
-                                        <td><b>Thể Loại:</b>Hành Động</td>
+                                        <td><b>Thể Loại:</b> Hành Động</td>
                                     </tr>
                                     <tr>
                                         <td><b>Thời Lượng:</b> 87 Phút</td>
@@ -228,7 +230,7 @@
                             </div>
                             <div class="div_Icon">
                                 <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
-                                <i class="fa-solid fa-cart-shopping Cart"></i>
+                                <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_7')"></i>
                             </div> 
                         </section> 
                     </div>
@@ -243,16 +245,16 @@
                                         <td><b>Thể Loại:</b> Hành Động</td>
                                     </tr>
                                     <tr>
-                                        <td><b>Thời Lượng:</b>120 Phút</td>
+                                        <td><b>Thời Lượng:</b> 120 Phút</td>
                                     </tr>
                                     <tr>
-                                        <td><b>Khởi Chiếu:</b>07-03-2025</td>
+                                        <td><b>Khởi Chiếu:</b> 07-03-2025</td>
                                     </tr>
                                 </table>
                             </div>
                             <div class="div_Icon">
                                 <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
-                                <i class="fa-solid fa-cart-shopping Cart"></i>
+                                <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_8')"></i>
                             </div> 
                         </section> 
                     </div>
@@ -265,19 +267,19 @@
                             <div class="div_Content">
                                 <table>
                                     <tr>
-                                        <td><b>Thể Loại:</b>Hoạt Hình,Trẻ Em</td>
+                                        <td><b>Thể Loại:</b> Hoạt Hình,Trẻ Em</td>
                                     </tr>
                                     <tr>
                                         <td><b>Thời Lượng:</b> 55 phút</td>
                                     </tr>
                                     <tr>
-                                        <td><b>Khởi Chiếu:</b>07-03-2025</td>
+                                        <td><b>Khởi Chiếu:</b> 07-03-2025</td>
                                     </tr>
                                 </table>
                             </div>
                             <div class="div_Icon">
                                 <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
-                                <i class="fa-solid fa-cart-shopping Cart"></i>
+                                <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_9')"></i>
                             </div> 
                         </section> 
                     </div>
@@ -290,19 +292,19 @@
                             <div class="div_Content">
                                 <table>
                                     <tr>
-                                        <td><b>Thể Loại:</b>Kinh Dị</td>
+                                        <td><b>Thể Loại:</b> Kinh Dị</td>
                                     </tr>
                                     <tr>
                                         <td><b>Thời Lượng:</b> 60 phút</td>
                                     </tr>
                                     <tr>
-                                        <td><b>Khởi Chiếu:</b>07-03-2025</td>
+                                        <td><b>Khởi Chiếu:</b> 07-03-2025</td>
                                     </tr>
                                 </table>
                             </div>
                             <div class="div_Icon">
                                 <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
-                                <i class="fa-solid fa-cart-shopping Cart"></i>
+                                <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_10')"></i>
                             </div> 
                         </section>
                     </div>
@@ -315,19 +317,19 @@
                             <div class="div_Content">
                                 <table>
                                     <tr>
-                                        <td><b>Thể Loại:</b>Cổ Tích</td>
+                                        <td><b>Thể Loại:</b> Cổ Tích</td>
                                     </tr>
                                     <tr>
                                         <td><b>Thời Lượng:</b> 55 phút</td>
                                     </tr>
                                     <tr>
-                                        <td><b>Khởi Chiếu:</b>07-03-2025</td>
+                                        <td><b>Khởi Chiếu:</b> 07-03-2025</td>
                                     </tr>
                                 </table>
                             </div>
                             <div class="div_Icon">
                                 <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this0)"></i>
-                                <i class="fa-solid fa-cart-shopping Cart"></i>
+                                <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_11')"></i>
                             </div> 
                         </section>
                     </div>
@@ -340,19 +342,19 @@
                         <div class="div_Content">
                             <table>
                                 <tr>
-                                    <td><b>Thể Loại:</b>Hành Động</td>
+                                    <td><b>Thể Loại:</b> Hành Động</td>
                                 </tr>
                                 <tr>
-                                    <td><b>Thời Lượng:</b>95 phút</td>
+                                    <td><b>Thời Lượng:</b> 95 phút</td>
                                 </tr>
                                 <tr>
-                                    <td><b>Khởi Chiếu:</b>07-03-2025</td>
+                                    <td><b>Khởi Chiếu:</b> 07-03-2025</td>
                                 </tr>
                             </table>
                         </div>
                         <div class="div_Icon">
                             <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this1)"></i>
-                            <i class="fa-solid fa-cart-shopping Cart"></i>
+                            <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_12')"></i>
                         </div> 
                         </section> 
                     </div>
@@ -367,16 +369,16 @@
                                         <td><b>Thể Loại:</b> Hoạt Hình, Phiêu Lưu</td>
                                     </tr>
                                     <tr>
-                                        <td><b>Thời Lượng:</b>33 Phút</td>
+                                        <td><b>Thời Lượng:</b> 33 Phút</td>
                                     </tr>
                                     <tr>
-                                        <td><b>Khởi Chiếu:</b>07-03-2025</td>
+                                        <td><b>Khởi Chiếu:</b> 07-03-2025</td>
                                     </tr>
                                 </table>
                             </div>
                             <div class="div_Icon">
                                 <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this2)"></i>
-                                <i class="fa-solid fa-cart-shopping Cart"></i>
+                                <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_13')"></i>
                             </div>
                         </section>
                     </div>
@@ -395,13 +397,13 @@
                                         <td><b>Thời Lượng:</b> 60 phút</td>
                                     </tr>
                                     <tr>
-                                        <td><b>Khởi Chiếu:</b>07-03-2025</td>
+                                        <td><b>Khởi Chiếu:</b> 07-03-2025</td>
                                     </tr>
                                 </table>
                             </div>
                             <div class="div_Icon">
                                 <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this3)"></i>
-                                <i class="fa-solid fa-cart-shopping Cart"></i>
+                                <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_14')"></i>
                             </div>
                         </section> 
                     </div>
@@ -417,16 +419,16 @@
                                         <td><b>Thể Loại:</b> Hành Động, Phiêu Lưu</td>
                                     </tr>
                                     <tr>
-                                        <td><b>Thời Lượng:</b>59 Phút</td>
+                                        <td><b>Thời Lượng:</b> 59 Phút</td>
                                     </tr>
                                     <tr>
-                                        <td><b>Khởi Chiếu:</b>07-03-2025</td>
+                                        <td><b>Khởi Chiếu:</b> 07-03-2025</td>
                                     </tr>
                                 </table>
                             </div>
                             <div class="div_Icon">
                                 <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this4)"></i>
-                                <i class="fa-solid fa-cart-shopping Cart"></i>
+                                <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_15')"></i>
                             </div> 
                         </section>
                     </div>
