--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,10 @@
     <header id="header">
         <div class="container">
             <div class="logo">
-                <a href="index.html"><h1>CGA</h1></a>
-                <img src="/images/menu.png" alt="" class="menu-icon" onclick="toggleMenu()">
+                <a href="index.html">
+                    <img class="logo-icon"  src="./images/logo.png" alt="" width="50px"  height="50px">
+                </a>
+                <img class="menu-icon" src="/images/menu.png" alt="" class="menu-icon" onclick="toggleMenu()">
             </div>
             <nav class="navbar">
                 <ul>
