--- a/register.html
+++ b/register.html
@@ -20,9 +20,9 @@
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                    <h1>CGA</h1>
+                    <img class="logo-icon"  src="./images/logo.png" alt="" width="50px"  height="50px">
                 </a>
-                <img src="/images/menu.png" alt="" class="menu-icon" onclick="toggleMenu()">
+                <img class="menu-icon" src="/images/menu.png" alt="" class="menu-icon" onclick="toggleMenu()">
             </div>
 
             <nav class="navbar">
