--- a/cart.html
+++ b/cart.html
@@ -40,12 +40,12 @@
             <table>
                 <tr>
                     <thead>
-                        <td >PosTer</td>
-                        <td >Ten Phim</td>
-                        <td >So Luong</td>
-                        <td >Ngay Xem</td>
-                        <td>Giá Vé</td>
-                        <td>yyyy</td>
+                        <td>Poster</td>
+                        <td >Tên phim</td>
+                        <td >Số lượng</td>
+                        <td >Ngày xem</td>
+                        <td>Giá vé</td>
+                        <td>Xóa khỏi giỏ hàng</td>
                     </thead>
                     <tbody id="tbody">
 
