--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                    <img class="logo-icon"  src="./images/logo.png" alt="" width="50px"  height="50px">
+                    <img class="logo-icon" src="./images/logo.png" alt="" width="50px" height="50px">
                 </a>
                 <img class="menu-icon" src="/images/menu.png" alt="" class="menu-icon" onclick="toggleMenu()">
             </div>
@@ -40,21 +40,21 @@
         <div class="login form-container">
             <div class="form-box">
                 <h2>Đăng nhập</h2>
-                <form action="" method="post" id="frm" onsubmit="return formValidate()">
+                <form action="" method="post" id="frm">
 
                     <div class="form-group">
-                        <label for="email" class="form-label">Tài khoản</label>
+                        <label for="user-name" class="form-label">Tài khoản</label>
                         <span class="input-icon"><img class="input-form-icon" src="images/user.png"></span>
-                        <input class="input-box form-control" type="textbox" placeholder="Email" id="email" name="email"
-                            onblur="isRequired(this)">
+                        <input class="input-box form-control need-valiate" type="textbox" placeholder="Tên đăng nhập"
+                            id="user-name" name="userName">
                         <span class="error-mess"></span>
                     </div>
 
                     <div class="form-group">
                         <label for="password" class="form-label">Mật khẩu</label>
                         <span class="input-icon"><img class="input-form-icon" src="images/lock.png"></span>
-                        <input class="input-box form-control " type="password" placeholder="Mật khẩu" id="password"
-                            name="password" onblur="isRequired(this)">
+                        <input class="input-box form-control need-validate" type="password" placeholder="Mật khẩu"
+                            id="password" name="password">
                         <span class="error-mess"></span>
                     </div>
                     <div class="form-group">
@@ -63,7 +63,7 @@
                     </div>
 
                     <div class="d-grid m-4">
-                        <button type="submit" class="btn btn-dark">Đăng nhập</button>
+                        <button type="button" onclick="formValidate()" class="btn btn-dark">Đăng nhập</button>
                     </div>
 
                 </form>
