--- a/register.html
+++ b/register.html
@@ -43,37 +43,35 @@
         <div class="form-container">
             <div class="form-box">
                 <h2>Tạo tài khoản mới</h2>
-                <form action="" method="post" id="frm" onsubmit="return formValidate()">
+                <form id="frm">
 
                     <div class="form-group">
-                        <label for="name" class="form-label">Họ và tên</label>
+                        <label for="user-name" class="form-label">Tên tài khoản</label>
                         <span class="input-icon"><img class="input-form-icon" src="images/user.png"></span>
-                        <input class="input-box form-control" type="textbox" placeholder="Họ và tên" id="name"
-                            name="name" onblur="isRequired(this)">
+                        <input class="input-box form-control need-validate" type="textbox" placeholder="Tên tài khoản"
+                            id="user-name" name="userName">
                         <span class="error-mess"></span>
                     </div>
 
                     <div class="form-group">
                         <label for="email" class="form-label">Email</label>
                         <span class="input-icon"><img class="input-form-icon" src="images/email.png"></span>
-                        <input class="input-box form-control" type="email" placeholder="Email" id="email" name="email"
-                            onblur="isRequired(this)">
+                        <input class="input-box form-control need-validate" type="email" placeholder="Email" id="email"
+                            name="email">
                         <span class="error-mess"></span>
                     </div>
 
                     <div class="form-group">
                         <label for="phone-number" class="form-label">Số điện thoại</label>
                         <span class="input-icon"><img class="input-form-icon" src="images/phone.png"></span>
-                        <input class="input-box form-control" type="textbox" placeholder="Số điện thoại"
-                            id="phone-number" name="phoneNumber" onkeypress="return isNumber(event)"
-                            onblur="isRequired(this)">
+                        <input class="input-box form-control need-validate" type="textbox" placeholder="Số điện thoại"
+                            id="phone-number" name="phoneNumber" onkeypress="return isNumber(event)">
                         <span class="error-mess"></span>
                     </div>
 
                     <div class="form-group">
                         <label for="birth-day" class="form-label">Ngày sinh</label>
-                        <input class="input-box form-control" type="date" id="birth-day" name="birthDay"
-                            onblur="isRequired(this)">
+                        <input class="input-box form-control need-validate" type="date" id="birth-day" name="birthDay">
                         <span class="error-mess"></span>
                     </div>
                     <div class="form-group">
@@ -93,21 +91,21 @@
                     <div class="form-group">
                         <label for="password" class="form-label">Mật khẩu</label>
                         <span class="input-icon"><img class="input-form-icon" src="images/lock.png"></span>
-                        <input class="input-box form-control " type="password" placeholder="Mật khẩu" id="password"
-                            name="password" onblur="isRequired(this)">
+                        <input class="input-box form-control need-validate" type="password" placeholder="Mật khẩu"
+                            id="password" name="password">
                         <span class="error-mess"></span>
                     </div>
 
                     <div class="form-group">
                         <label for="confirm-password" class="form-label">Nhập lại mật khẩu</label>
                         <span class="input-icon"><img class="input-form-icon" src="images/lock.png"></span>
-                        <input class="input-box form-control " type="password" placeholder="Nhập lại mật khẩu"
-                            id="confirm-password" name="confirmPassword" onblur="isRequired(this)">
+                        <input class="input-box form-control need-validate" type="password"
+                            placeholder="Nhập lại mật khẩu" id="confirm-password" name="confirmPassword">
                         <span class="error-mess"></span>
                     </div>
 
                     <div class="d-grid m-4">
-                        <button type="submit" class="btn btn-dark">Đăng ký</button>
+                        <button type="button" onclick="formValidate()" class="btn btn-dark">Đăng ký</button>
                     </div>
                 </form>
 
