--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đăng ký</title>
-    <link rel="icon" href="./images/logo.ico">
+    <link rel="favicon" href="./images/logo.ico">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -20,7 +20,7 @@
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                    <img class="logo-icon"  src="./images/logo.png" alt="" width="50px"  height="50px">
+                    <img class="logo-icon" src="./images/logo.png" alt="" width="50px" height="50px">
                 </a>
                 <img class="menu-icon" src="/images/menu.png" alt="" class="menu-icon" onclick="toggleMenu()">
             </div>
@@ -86,6 +86,7 @@
                                 <label class="form-check-lable" for="gen2">Nữ</label>
                             </div>
                         </div>
+                        <span class="error-mess"></span>
                     </div>
 
                     <div class="form-group">
