--- a/cart.html
+++ b/cart.html
@@ -42,11 +42,11 @@
                     <thead>
                         <tr>                        
                             <td >PosTer</td>
-                            <td >Ten Phim</td>
-                            <td >So Luong</td>
-                            <td >Ngay Xem</td>
+                            <td >Tên Phim</td>
+                            <td >Số Lượng</td>
+                            <td >Ngày Xem</td>
                             <td>Giá Vé</td>
-                            <td>yyyy</td>
+                            <td>Xóa</td>
                         </tr>
 
                     </thead>
@@ -59,19 +59,19 @@
                                 <img src="/images/BongNgo.png" alt="" class="img_Other">
                                 <h5>Bỏng Ngô</h5>
                                 <h5>Giá: 50k</h5>
-                                <h5>Số Lượng: <input type="number" name="" id="" value="0" min="0" max="10" class="Mon"></h5>
+                                <h5>Số Lượng: <input type="number" name="" id="" value="0" min="0" max="10" class="Mon SoLuongThayDoi" onchange="TongTien()"></h5>
                             </td>
                             <td colspan="2">
                                 <img src="/images/DoUong.jpg" alt="" class="img_Other">
                                 <h5>Pepsi</h5>
                                 <h5>Giá: 15k</h5>
-                                <h5>Số Lượng: <input type="number" name="" id="" value="0" min="0" max="10" class="Mon"></h5>
+                                <h5>Số Lượng: <input type="number" name="" id="" value="0" min="0" max="10" class="Mon SoLuongThayDoi" onchange="TongTien()"></h5>
                             </td>
                             <td colspan="2">
                                 <img src="/images/ComBo.jpg" alt="" class="img_Other">
                                 <h5>Combo</h5>
                                 <h5>Giá: 59k</h5>
-                                <h5>Số Lượng: <input type="number" name="" id="" value="0" min="0" max="10" class="Mon"></h5>
+                                <h5>Số Lượng: <input type="number" name="" id="" value="0" min="0" max="10" class="Mon SoLuongThayDoi" onchange="TongTien()"></h5>
                             </td>
                         </tr>
                         <tr id="ThanhToan">
@@ -82,12 +82,7 @@
                         </tr>
                     </tfoot>
             </table>
-        </div>
-
-        <div id="Sum_Tien">
-            
-        </div>
-        
+        </div>        
     </main>
     <footer id="footer">
         <div class="container footer-nav">
