--- a/cart.html
+++ b/cart.html
@@ -38,7 +38,7 @@
     <main id="main_Cart">
         <h2>Đơn Hàng</h2>
         <div id="table_Cart">
-            <table>
+            <table id="movie-table">
                     <thead>
                         <tr>                        
                             <td class="poster-td"><b>Poster</b></td>
@@ -56,7 +56,7 @@
                     
             </table>
             <h2>Vật phẩm mua kèm</h2>
-            <table>
+            <table id="food-table">
                 <tr>
                     <td>
                         <img src="/images/BongNgo.png" alt="" class="img_Other">
@@ -86,7 +86,7 @@
                 <p colspan="6" id="ThanhTien"></p>
             </div>
             <div id="XacNhanDonHang">
-                <p colspan="6"><input type="submit" name="" id="" value="Xác Nhận Đơn Hàng"></p>
+                <p colspan="6"><input type="submit" name="" id="" value="Xác Nhận Đơn Hàng" onclick="dathang()"></p>
             </div>
         </div>
        
