--- a/cart.html
+++ b/cart.html
@@ -62,19 +62,19 @@
                         <img src="/images/BongNgo.png" alt="" class="img_Other">
                         <h5>Bỏng Ngô</h5>
                         <h5>Giá: 50k</h5>
-                        <h5>Số Lượng: <input type="number" name="" id="" value="0" min="0" max="10" class="Mon SoLuongThayDoi" onchange="TongTien()"></h5>
+                        <h5>Số Lượng: <input type="number" name="" id="" value="0" min="0" max="10" class="Mon SoLuongThayDoi" onchange="Cap_Nhat_Value_MonAn(0,this)"></h5>
                     </td>
                     <td>
                         <img src="/images/DoUong.jpg" alt="" class="img_Other">
                         <h5>Pepsi</h5>
                         <h5>Giá: 15k</h5>
-                        <h5>Số Lượng: <input type="number" name="" id="" value="0" min="0" max="10" class="Mon SoLuongThayDoi" onchange="TongTien()"></h5>
+                        <h5>Số Lượng: <input type="number" name="" id="" value="0" min="0" max="10" class="Mon SoLuongThayDoi" onchange="Cap_Nhat_Value_MonAn(1,this)"></h5>
                     </td>
                     <td>
                         <img src="/images/ComBo.jpg" alt="" class="img_Other">
                         <h5>Combo</h5>
                         <h5>Giá: 59k</h5>
-                        <h5>Số Lượng: <input type="number" name="" id="" value="0" min="0" max="10" class="Mon SoLuongThayDoi" onchange="TongTien()"></h5>
+                        <h5>Số Lượng: <input type="number" name="" id="" value="0" min="0" max="10" class="Mon SoLuongThayDoi" onchange="Cap_Nhat_Value_MonAn(2,this)"></h5>
                     </td>
                 </tr>
                 
