--- a/products.html
+++ b/products.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
         <script src="./js/scripts.js"></script>
     </head>
-    <body id = "body_Product" onload="clearLocalStore()">
+    <body id = "body_Product">
         <header id="header">
             <div class="container">
                 <div class="logo">
@@ -385,7 +385,7 @@
                                 </table>
                             </div>
                             <div class="div_Icon">
-                                <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this0)"></i>
+                                <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
                                 <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_11')"></i>
                             </div> 
                         </section>
@@ -415,7 +415,7 @@
                             </table>
                         </div>
                         <div class="div_Icon">
-                            <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this1)"></i>
+                            <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
                             <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_12')"></i>
                         </div> 
                         </section> 
@@ -444,7 +444,7 @@
                                 </table>
                             </div>
                             <div class="div_Icon">
-                                <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this2)"></i>
+                                <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
                                 <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_13')"></i>
                             </div>
                         </section>
@@ -474,7 +474,7 @@
                                 </table>
                             </div>
                             <div class="div_Icon">
-                                <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this3)"></i>
+                                <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
                                 <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_14')"></i>
                             </div>
                         </section> 
@@ -504,7 +504,7 @@
                                 </table>
                             </div>
                             <div class="div_Icon">
-                                <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this4)"></i>
+                                <i class="fa-solid fa-heart Heart" value = "0" onclick="changeHeartColor(this)"></i>
                                 <i class="fa-solid fa-cart-shopping Cart" onclick="add_cart('phim_15')"></i>
                             </div> 
                         </section>
