--- a/about.html
+++ b/about.html
@@ -75,9 +75,9 @@
             <div>
                 <h3>CGA Việt Nam</h3>
                 <ul>
-                    <li><a href="#">Giới thiệu</a></li>
-                    <li><a href="#">Sản phẩm</a></li>
-                    <li><a href="#">Liên hệ</a></li>
+                    <li><a href="about.html">Giới thiệu</a></li>
+                    <li><a href="products.html">Sản phẩm</a></li>
+                    <li><a href="contact.html">Liên hệ</a></li>
                     <li><a href="#">Chính sách</a></li>
                     <li><a href="#">Quảng cáo</a></li>
                     <li><a href="#">Câu hỏi thường gặp</a></li>
