--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <div class ="aSectionPhim tre_em hoat_hinh i45">                
                         <section class="phim_Product">
                             <div class="container_img">
-                                <img src="/images/phim2.jpg" alt="" class="img_Product" >
+                                <img src="images/phim2.jpg" alt="" class="img_Product" >
                                 <div class="Cart_mobile">
                                     <input type="submit" value="Đặt Hàng" name="0" class="NutDatHang" onclick="add_cart_mobile('phim_2',1)">
                                 </div>
@@ -111,7 +111,7 @@
                     <div class="aSectionPhim hanh_dong i60">
                         <section class="phim_Product">
                             <div class="container_img">
-                                <img src="/images/phim3.jpg" alt="" class="img_Product" >
+                                <img src="images/phim3.jpg" alt="" class="img_Product" >
                                 <div class="Cart_mobile">
                                     <input type="submit" value="Đặt Hàng" name="0" class="NutDatHang" onclick="add_cart_mobile('phim_3',2)">
                                 </div>
@@ -140,7 +140,7 @@
                     <div class="aSectionPhim kinh_di i60">
                         <section class="phim_Product">
                             <div class="container_img">
-                                <img src="/images/phim4.jpg" alt="" class="img_Product" >
+                                <img src="images/phim4.jpg" alt="" class="img_Product" >
                                 <div class="Cart_mobile">
                                     <input type="submit" value="Đặt Hàng" name="0" class="NutDatHang" onclick="add_cart_mobile('phim_4',3)">
                                 </div>
@@ -172,7 +172,7 @@
                     <div class="aSectionPhim hanh_dong tren60">
                         <section class="phim_Product">
                             <div class="container_img">
-                                <img src="/images/phim7.jpg" alt="" class="img_Product" >
+                                <img src="images/phim7.jpg" alt="" class="img_Product" >
                                 <div class="Cart_mobile">
                                     <input type="submit" value="Đặt Hàng" name="0" class="NutDatHang" onclick="add_cart_mobile('phim_7',6)">
                                 </div>
@@ -203,7 +203,7 @@
                     <div class="aSectionPhim tre_em hoat_hinh i60">
                         <section class="phim_Product"> 
                             <div class="container_img">
-                                <img src="/images/phim9.jpg" alt="" class="img_Product" >
+                                <img src="images/phim9.jpg" alt="" class="img_Product" >
                                 <div class="Cart_mobile">
                                     <input type="submit" value="Đặt Hàng" name="0" class="NutDatHang" onclick="add_cart_mobile('phim_9',8)">
                                 </div>
@@ -233,7 +233,7 @@
                     <div class="aSectionPhim kinh_di">
                         <section class="phim_Product">
                             <div class="container_img">
-                                <img src="/images/phim10.jpg" alt="" class="img_Product" >
+                                <img src="images/phim10.jpg" alt="" class="img_Product" >
                                 <div class="Cart_mobile">
                                     <input type="submit" value="Đặt Hàng" name="0" class="NutDatHang" onclick="add_cart_mobile('phim_10',9)">
                                 </div>
@@ -263,7 +263,7 @@
                     <div class="aSectionPhim tre_em i60">
                         <section class="phim_Product">
                             <div class="container_img">
-                                <img src="/images/phim11.jpg" alt="" class="img_Product">
+                                <img src="images/phim11.jpg" alt="" class="img_Product">
                                 <div class="Cart_mobile">
                                     <input type="submit" value="Đặt Hàng" name="0" class="NutDatHang" onclick="add_cart_mobile('phim_11',10)">
                                 </div>
@@ -293,7 +293,7 @@
                     <div class="aSectionPhim hanh_dong tren60">    
                         <section class="phim_Product">
                             <div class="container_img">
-                                <img src="/images/phim12.jpg" alt="" class="img_Product" >
+                                <img src="images/phim12.jpg" alt="" class="img_Product" >
                                 <div class="Cart_mobile">
                                     <input type="submit" value="Đặt Hàng" name="0" class="NutDatHang" onclick="add_cart_mobile('phim_12',11)">
                                 </div>
@@ -323,7 +323,7 @@
                     <div class="aSectionPhim tre_em hoat_hinh i60">
                         <section class="phim_Product">
                             <div class="container_img">
-                                <img src="/images/phim14.jpg" alt="" class="img_Product" >
+                                <img src="images/phim14.jpg" alt="" class="img_Product" >
                                 <div class="Cart_mobile">
                                     <input type="submit" value="Đặt Hàng" name="0" class="NutDatHang"  onclick="add_cart_mobile('phim_14',13)">
                                 </div>
@@ -353,7 +353,7 @@
                     <div class="aSectionPhim hanh_dong i60">
                         <section class="phim_Product">
                             <div class="container_img">
-                                <img src="/images/phim15.jpg" alt="" class="img_Product" >
+                                <img src="images/phim15.jpg" alt="" class="img_Product" >
                                 <div class="Cart_mobile">
                                     <input type="submit" value="Đặt Hàng" name="0" class="NutDatHang" onclick="add_cart_mobile('phim_15',13)">
                                 </div>
@@ -392,7 +392,7 @@
                         <section class="phim_Product">
 
                             <div class="container_img">
-                                <img src="/images/phim1.jpg" alt="" class="img_Product" >
+                                <img src="images/phim1.jpg" alt="" class="img_Product" >
                                 <div class="Cart_mobile">
                                     <input type="submit" value="Đặt Hàng" name="0" class="NutDatHang" onclick="add_cart_mobile('phim_1',0)">
                                 </div>
@@ -423,7 +423,7 @@
                     <div class="aSectionPhim kinh_di i45">
                         <section class="phim_Product">
                             <div class="container_img">
-                                <img src="/images/phim6.jpg" alt="" class="img_Product" >
+                                <img src="images/phim6.jpg" alt="" class="img_Product" >
                                 <div class="Cart_mobile">
                                     <input type="submit" value="Đặt Hàng" name="0" class="NutDatHang" onclick="add_cart_mobile('phim_6',5)">
                                 </div>
@@ -456,7 +456,7 @@
                     <div class="aSectionPhim tre_em hoat_hinh i60">
                         <section class="phim_Product"> 
                             <div class="container_img">
-                                <img src="/images/phim9.jpg" alt="" class="img_Product" >
+                                <img src="images/phim9.jpg" alt="" class="img_Product" >
                                 <div class="Cart_mobile">
                                     <input type="submit" value="Đặt Hàng" name="0" class="NutDatHang" onclick="add_cart_mobile('phim_9',8)">
                                 </div>
@@ -487,7 +487,7 @@
                     <div class="aSectionPhim hanh_dong tren60">    
                         <section class="phim_Product">
                             <div class="container_img">
-                                <img src="/images/phim12.jpg" alt="" class="img_Product" >
+                                <img src="images/phim12.jpg" alt="" class="img_Product" >
                                 <div class="Cart_mobile">
                                     <input type="submit" value="Đặt Hàng" name="0" class="NutDatHang" onclick="add_cart_mobile('phim_12',11)">
                                 </div>
@@ -518,7 +518,7 @@
                     <div class="aSectionPhim tre_em hoat_hinh i60">
                         <section class="phim_Product">
                             <div class="container_img">
-                                <img src="/images/phim14.jpg" alt="" class="img_Product" >
+                                <img src="images/phim14.jpg" alt="" class="img_Product" >
                                 <div class="Cart_mobile">
                                     <input type="submit" value="Đặt Hàng" name="0" class="NutDatHang"  onclick="add_cart_mobile('phim_14',13)">
                                 </div>
