--- a/products.html
+++ b/products.html
@@ -67,7 +67,7 @@
                         <section class="phim_Product">
 
                             <div class="container_img">
-                                <img src="/images/phim1.jpg" alt="" class="img_Product" >
+                                <img src="images/phim1.jpg" alt="" class="img_Product" >
                                 <div class="Cart_mobile">
                                     <input type="submit" value="Đặt Hàng" name="0" class="NutDatHang" onclick="add_cart_mobile('phim_1',0)">
                                 </div>
@@ -97,7 +97,7 @@
                     <div class ="aSectionPhim tre_em hoat_hinh i45">                
                         <section class="phim_Product">
                             <div class="container_img">
-                                <img src="/images/phim2.jpg" alt="" class="img_Product" >
+                                <img src="images/phim2.jpg" alt="" class="img_Product" >
                                 <div class="Cart_mobile">
                                     <input type="submit" value="Đặt Hàng" name="0" class="NutDatHang" onclick="add_cart_mobile('phim_2',1)">
                                 </div>
@@ -126,7 +126,7 @@
                     <div class="aSectionPhim hanh_dong i60">
                         <section class="phim_Product">
                             <div class="container_img">
-                                <img src="/images/phim3.jpg" alt="" class="img_Product" >
+                                <img src="images/phim3.jpg" alt="" class="img_Product" >
                                 <div class="Cart_mobile">
                                     <input type="submit" value="Đặt Hàng" name="0" class="NutDatHang" onclick="add_cart_mobile('phim_3',2)">
                                 </div>
@@ -156,7 +156,7 @@
                     <div class="aSectionPhim kinh_di i60">
                         <section class="phim_Product">
                             <div class="container_img">
-                                <img src="/images/phim4.jpg" alt="" class="img_Product" >
+                                <img src="images/phim4.jpg" alt="" class="img_Product" >
                                 <div class="Cart_mobile">
                                     <input type="submit" value="Đặt Hàng" name="0" class="NutDatHang" onclick="add_cart_mobile('phim_4',3)">
                                 </div>
@@ -187,7 +187,7 @@
                     <div class="aSectionPhim kinh_di hanh_dong tren60">
                         <section class="phim_Product">
                             <div class="container_img">
-                                <img src="/images/phim5.jpg" alt="" class="img_Product" >
+                                <img src="images/phim5.jpg" alt="" class="img_Product" >
                                 <div class="Cart_mobile">
                                     <input type="submit" value="Đặt Hàng" name="0" class="NutDatHang" onclick="add_cart_mobile('phim_5',4)">
                                 </div>
@@ -217,7 +217,7 @@
                     <div class="aSectionPhim kinh_di i45">
                         <section class="phim_Product">
                             <div class="container_img">
-                                <img src="/images/phim6.jpg" alt="" class="img_Product" >
+                                <img src="images/phim6.jpg" alt="" class="img_Product" >
                                 <div class="Cart_mobile">
                                     <input type="submit" value="Đặt Hàng" name="0" class="NutDatHang" onclick="add_cart_mobile('phim_6',5)">
                                 </div>
@@ -246,7 +246,7 @@
                     <div class="aSectionPhim hanh_dong tren60">
                         <section class="phim_Product">
                             <div class="container_img">
-                                <img src="/images/phim7.jpg" alt="" class="img_Product" >
+                                <img src="images/phim7.jpg" alt="" class="img_Product" >
                                 <div class="Cart_mobile">
                                     <input type="submit" value="Đặt Hàng" name="0" class="NutDatHang" onclick="add_cart_mobile('phim_7',6)">
                                 </div>
@@ -275,7 +275,7 @@
                     <div class="aSectionPhim hanh_dong tren60">
                         <section class="phim_Product">
                             <div class="container_img">
-                                <img src="/images/phim8.jpg" alt="" class="img_Product" >
+                                <img src="images/phim8.jpg" alt="" class="img_Product" >
                                 <div class="Cart_mobile">
                                     <input type="submit" value="Đặt Hàng" name="0" class="NutDatHang" onclick="add_cart_mobile('phim_8',7)">
                                 </div>
@@ -305,7 +305,7 @@
                     <div class="aSectionPhim tre_em hoat_hinh i60">
                         <section class="phim_Product"> 
                             <div class="container_img">
-                                <img src="/images/phim9.jpg" alt="" class="img_Product" >
+                                <img src="images/phim9.jpg" alt="" class="img_Product" >
                                 <div class="Cart_mobile">
                                     <input type="submit" value="Đặt Hàng" name="0" class="NutDatHang" onclick="add_cart_mobile('phim_9',8)">
                                 </div>
@@ -335,7 +335,7 @@
                     <div class="aSectionPhim kinh_di">
                         <section class="phim_Product">
                             <div class="container_img">
-                                <img src="/images/phim10.jpg" alt="" class="img_Product" >
+                                <img src="images/phim10.jpg" alt="" class="img_Product" >
                                 <div class="Cart_mobile">
                                     <input type="submit" value="Đặt Hàng" name="0" class="NutDatHang" onclick="add_cart_mobile('phim_10',9)">
                                 </div>
@@ -365,7 +365,7 @@
                     <div class="aSectionPhim tre_em i60">
                         <section class="phim_Product">
                             <div class="container_img">
-                                <img src="/images/phim11.jpg" alt="" class="img_Product">
+                                <img src="images/phim11.jpg" alt="" class="img_Product">
                                 <div class="Cart_mobile">
                                     <input type="submit" value="Đặt Hàng" name="0" class="NutDatHang" onclick="add_cart_mobile('phim_11',10)">
                                 </div>
@@ -395,7 +395,7 @@
                     <div class="aSectionPhim hanh_dong tren60">    
                         <section class="phim_Product">
                             <div class="container_img">
-                                <img src="/images/phim12.jpg" alt="" class="img_Product" >
+                                <img src="images/phim12.jpg" alt="" class="img_Product" >
                                 <div class="Cart_mobile">
                                     <input type="submit" value="Đặt Hàng" name="0" class="NutDatHang" onclick="add_cart_mobile('phim_12',11)">
                                 </div>
@@ -424,7 +424,7 @@
                     <div class="aSectionPhim tre_em hoat_hinh i45">
                         <section class="phim_Product">
                             <div class="container_img">
-                                <img src="/images/phim13.jpg" alt="" class="img_Product" >
+                                <img src="images/phim13.jpg" alt="" class="img_Product" >
                                 <div class="Cart_mobile">
                                     <input type="submit" value="Đặt Hàng" name="0" class="NutDatHang"  onclick="add_cart_mobile('phim_13',12)">
                                 </div>
@@ -454,7 +454,7 @@
                     <div class="aSectionPhim tre_em hoat_hinh i60">
                         <section class="phim_Product">
                             <div class="container_img">
-                                <img src="/images/phim14.jpg" alt="" class="img_Product" >
+                                <img src="images/phim14.jpg" alt="" class="img_Product" >
                                 <div class="Cart_mobile">
                                     <input type="submit" value="Đặt Hàng" name="0" class="NutDatHang"  onclick="add_cart_mobile('phim_14',13)">
                                 </div>
@@ -484,7 +484,7 @@
                     <div class="aSectionPhim hanh_dong i60">
                         <section class="phim_Product">
                             <div class="container_img">
-                                <img src="/images/phim15.jpg" alt="" class="img_Product" >
+                                <img src="images/phim15.jpg" alt="" class="img_Product" >
                                 <div class="Cart_mobile">
                                     <input type="submit" value="Đặt Hàng" name="0" class="NutDatHang" onclick="add_cart_mobile('phim_15',13)">
                                 </div>
