--- a/login.html
+++ b/login.html
@@ -6,14 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đăng nhập</title>
     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 
 </head>
 
-<body>
+<body class="body">
     <header id="header">
         <div class="container">
             <div class="logo">
@@ -36,47 +34,46 @@
         </div>
 
     </header>
-    <main class="form-center" id="main-content">
-        <div class="login form-container">
+    <main>
+        <div class="form-container">
             <div class="form-box">
-                <h2>Đăng nhập</h2>
-                <form id="frm">
+                <div class="form">
+                    <h2>Đăng nhập</h2>
+                    <form id="frm">
 
-                    <div class="form-group">
-                        <label for="user-name" class="form-label">Tài khoản</label>
-                        <span class="input-icon"><img class="input-form-icon" src="images/user.png"></span>
-                        <input class="input-box form-control" type="textbox" placeholder="Tên đăng nhập" id="user-name"
-                            name="userName">
-                        <span class="error-mess"></span>
+                        <div class="form-group">
+                            <label for="user-name" class="form-label">Tài khoản</label>
+                            <span class="input-icon"><img class="input-form-icon" src="images/user.png"></span>
+                            <input class="input-box" type="textbox" placeholder="Tên đăng nhập" id="user-name"
+                                name="userName">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="password" class="form-label">Mật khẩu</label>
+                            <span class="input-icon"><img class="input-form-icon" src="images/lock.png"></span>
+                            <input class="input-box " type="password" placeholder="Mật khẩu" id="password"
+                                name="password">
+                        </div>
+                        <div class="form-group">
+                            <input class="form-check" type="checkbox" id="remember">
+                            <label class="form-label" for="remember">Ghi nhớ tôi </label>
+                        </div>
+
+                        <div class="d-grid m-4">
+                            <button type="submit" class="btn">Đăng nhập</button>
+                        </div>
+
+                    </form>
+
+                    <div class="alr-have-acc">
+                        <p><a href="#">Quên mật khẩu?</a> <a href="./register.html">Đăng ký</a></p>
                     </div>
-
-                    <div class="form-group">
-                        <label for="password" class="form-label">Mật khẩu</label>
-                        <span class="input-icon"><img class="input-form-icon" src="images/lock.png"></span>
-                        <input class="input-box form-control" type="password" placeholder="Mật khẩu" id="password"
-                            name="password">
-                        <span class="error-mess"></span>
-                    </div>
-                    <div class="form-group">
-                        <input class="form-check-input " type="checkbox" id="remember">
-                        <label class="form-check-label " for="remember">Ghi nhớ tôi </label>
-                    </div>
-
-                    <div class="d-grid m-4">
-                        <button type="submit" class="btn btn-dark">Đăng nhập</button>
-                    </div>
-
-                </form>
-
-                <div class="alr-have-acc">
-                    <p class="text-center"><a href="#">Quên mật khẩu?</a> <a href="./register.html">Đăng ký</a></p>
                 </div>
             </div>
         </div>
-
     </main>
     <footer id="footer">
-        <div class="container footer-nav">
+        <div class="footer-nav">
 
             <div>
                 <h3>CGA Việt Nam</h3>
