--- a/register.html
+++ b/register.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đăng ký</title>
     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 
@@ -39,71 +36,72 @@
         </div>
 
     </header>
-    <main class="form-center" id="main-content">
+    <main>
         <div class="form-container">
             <div class="form-box">
-                <h2>Tạo tài khoản mới</h2>
-                <form id="frm">
+                <div class=" form">
+                    <h2>Tạo tài khoản mới</h2>
+                    <form id="frm">
 
-                    <div class="form-group">
-                        <label for="user-name" class="form-label">Tên tài khoản</label>
-                        <span class="input-icon"><img class="input-form-icon" src="images/user.png"></span>
-                        <input class="input-box form-control need-validate" type="textbox" placeholder="Tên tài khoản"
-                            id="user-name" name="userName">
-                        <span class="error-mess"></span>
-                    </div>
+                        <div class="form-group">
+                            <label for="user-name" class="form-label">Tên tài khoản</label>
+                            <span class="input-icon"><img class="input-form-icon" src="images/user.png"></span>
+                            <input class="input-box need-validate" type="textbox" placeholder="Tên tài khoản"
+                                id="user-name" name="userName">
+                            <span class="error-mess"></span>
+                        </div>
 
-                    <div class="form-group">
-                        <label for="email" class="form-label">Email</label>
-                        <span class="input-icon"><img class="input-form-icon" src="images/email.png"></span>
-                        <input class="input-box form-control need-validate" type="email" placeholder="Email" id="email"
-                            name="email">
-                        <span class="error-mess"></span>
-                    </div>
+                        <div class="form-group">
+                            <label for="email" class="form-label">Email</label>
+                            <span class="input-icon"><img class="input-form-icon" src="images/email.png"></span>
+                            <input class="input-box need-validate" type="email" placeholder="Email" id="email"
+                                name="email">
+                            <span class="error-mess"></span>
+                        </div>
 
-                    <div class="form-group">
-                        <label for="phone-number" class="form-label">Số điện thoại</label>
-                        <span class="input-icon"><img class="input-form-icon" src="images/phone.png"></span>
-                        <input class="input-box form-control need-validate" type="textbox" placeholder="Số điện thoại"
-                            id="phone-number" name="phoneNumber" onkeypress="return isNumber(event)">
-                        <span class="error-mess"></span>
-                    </div>
+                        <div class="form-group">
+                            <label for="phone-number" class="form-label">Số điện thoại</label>
+                            <span class="input-icon"><img class="input-form-icon" src="images/phone.png"></span>
+                            <input class="input-box need-validate" type="textbox" placeholder="Số điện thoại"
+                                id="phone-number" name="phoneNumber" onkeypress="return isNumber(event)">
+                            <span class="error-mess"></span>
+                        </div>
 
-                    <div class="form-group">
-                        <label for="birth-day" class="form-label">Ngày sinh</label>
-                        <input class="input-box form-control need-validate" type="date" id="birth-day" name="birthDay">
-                        <span class="error-mess"></span>
-                    </div>
-                    <div class="form-group">
-                        <label for="password" class="form-label">Mật khẩu</label>
-                        <span class="input-icon"><img class="input-form-icon" src="images/lock.png"></span>
-                        <input class="input-box form-control need-validate" type="password" placeholder="Mật khẩu"
-                            id="password" name="password">
-                        <span class="error-mess"></span>
-                    </div>
+                        <div class="form-group">
+                            <label for="birth-day" class="form-label">Ngày sinh</label>
+                            <input class="input-box need-validate" type="date" id="birth-day" name="birthDay">
+                            <span class="error-mess"></span>
+                        </div>
+                        <div class="form-group">
+                            <label for="password" class="form-label">Mật khẩu</label>
+                            <span class="input-icon"><img class="input-form-icon" src="images/lock.png"></span>
+                            <input class="input-box need-validate" type="password" placeholder="Mật khẩu" id="password"
+                                name="password">
+                            <span class="error-mess"></span>
+                        </div>
 
-                    <div class="form-group">
-                        <label for="confirm-password" class="form-label">Nhập lại mật khẩu</label>
-                        <span class="input-icon"><img class="input-form-icon" src="images/lock.png"></span>
-                        <input class="input-box form-control need-validate" type="password"
-                            placeholder="Nhập lại mật khẩu" id="confirm-password" name="confirmPassword">
-                        <span class="error-mess"></span>
-                    </div>
+                        <div class="form-group">
+                            <label for="confirm-password" class="form-label">Nhập lại mật khẩu</label>
+                            <span class="input-icon"><img class="input-form-icon" src="images/lock.png"></span>
+                            <input class="input-box need-validate" type="password" placeholder="Nhập lại mật khẩu"
+                                id="confirm-password" name="confirmPassword">
+                            <span class="error-mess"></span>
+                        </div>
 
-                    <div class="d-grid m-4">
-                        <button type="button" onclick="formValidate()" class="btn btn-dark">Đăng ký</button>
-                    </div>
-                </form>
+                        <div>
+                            <button type="button" onclick="formValidate()" class="btn btn-dark">Đăng ký</button>
+                        </div>
+                    </form>
 
-                <div class="alr-have-acc">
-                    <p class="text-center">Đã có tài khoản? <a href="./login.html">Đăng nhập</a></p>
+                    <div class="alr-have-acc">
+                        <p>Đã có tài khoản? <a href="./login.html">Đăng nhập</a></p>
+                    </div>
                 </div>
             </div>
         </div>
-
     </main>
     <footer id="footer">
-        <div class="container footer-nav">
+        <div class="footer-nav">
 
             <div>
                 <h3>CGA Việt Nam</h3>
