--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
         </div>
 
     </header>
-    <main>
+    <main class="wrapper">
         <div class="form-container">
             <div class="form-box">
                 <div class="form">
